// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rerender works properly 1`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-8"
    >
      <div>
        <div>
          <div
            className="input-group input-group-lg"
          >
            <input
              className="form-control"
              name="providerSearchTerm"
              onChange={[Function]}
              placeholder="Search for providers"
              type="text"
              value=""
            />
            <input
              className="form-control"
              name="zipSearchTerm"
              onChange={[Function]}
              placeholder="Zip code"
              type="text"
              value=""
            />
            <div
              className="input-group-append"
            >
              <button
                className="btn btn-primary"
                onClick={[Function]}
                type="button"
              >
                Search
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-3 text-right"
    >
      <a
        href="#"
      >
        Sign up
      </a>
    </div>
    <div
      className="col-1"
    >
      <a
        href="#"
      >
        Log in
      </a>
    </div>
  </div>
  <br />
  <br />
  <div
    className="row"
  >
    <div
      className="col-3"
    >
      <div
        style={
          Object {
            "position": "fixed",
          }
        }
      >
        <ul
          className="list-group"
        >
          <li
            className="list-group-item no-border"
          >
            <a
              href="#123"
            >
              Home Improvements
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#345"
            >
              Pets
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#234"
            >
              Wellness
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#456"
            >
              Business
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#567"
            >
              Events
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#678"
            >
              Crafts
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#789"
            >
              Design and Web
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#890"
            >
              Legal
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#987"
            >
              Personal
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#876"
            >
              Photography
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="col-9"
    >
      <ul
        className="list-group no-border"
      >
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="123"
            />
            <h2>
              Home Improvements
            </h2>
            <div>
              <div
                className="row"
              >
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Appliance Installation
                      </a>
                    </p>
                  </div>
                </div>
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Cabinetry
                      </a>
                    </p>
                  </div>
                </div>
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Door Installation
                      </a>
                    </p>
                  </div>
                </div>
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Concrete Removal
                      </a>
                    </p>
                  </div>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Appliance Installation
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Cabinetry
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Door Installation
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Concrete Removal
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Dishwasher Installation
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Finish Carpentry
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Floor Polishing
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Furniture Assembly
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Generator Installation
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Gardening
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Home Organizing
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Electrical and Wiring Repair
                  </a>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="345"
            />
            <h2>
              Pets
            </h2>
            <div>
              <div
                className="row"
              >
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Cat Grooming
                      </a>
                    </p>
                  </div>
                </div>
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Dog Training
                      </a>
                    </p>
                  </div>
                </div>
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Pet Boarding
                      </a>
                    </p>
                  </div>
                </div>
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Pet Sitting
                      </a>
                    </p>
                  </div>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Cat Grooming
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Dog Training
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Pet Boarding
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Pet Sitting
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Dog Walking
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                  </a>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="234"
            />
            <h2>
              Wellness
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="456"
            />
            <h2>
              Business
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="567"
            />
            <h2>
              Events
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="678"
            />
            <h2>
              Crafts
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="789"
            />
            <h2>
              Design and Web
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="890"
            />
            <h2>
              Legal
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="987"
            />
            <h2>
              Personal
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="876"
            />
            <h2>
              Photography
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Rerender works properly 2`] = `
<div>
  <div
    className="row"
  >
    <div
      className="col-8"
    >
      <div>
        <div>
          <div
            className="input-group input-group-lg"
          >
            <input
              className="form-control"
              name="providerSearchTerm"
              onChange={[Function]}
              placeholder="Search for providers"
              type="text"
              value=""
            />
            <input
              className="form-control"
              name="zipSearchTerm"
              onChange={[Function]}
              placeholder="Zip code"
              type="text"
              value=""
            />
            <div
              className="input-group-append"
            >
              <button
                className="btn btn-primary"
                onClick={[Function]}
                type="button"
              >
                Search
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="col-3 text-right"
    >
      <a
        href="#"
      >
        Sign up
      </a>
    </div>
    <div
      className="col-1"
    >
      <a
        href="#"
      >
        Log in
      </a>
    </div>
  </div>
  <br />
  <br />
  <div
    className="row"
  >
    <div
      className="col-3"
    >
      <div
        style={
          Object {
            "position": "fixed",
          }
        }
      >
        <ul
          className="list-group"
        >
          <li
            className="list-group-item no-border"
          >
            <a
              href="#123"
            >
              Home Improvements
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#345"
            >
              Pets
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#234"
            >
              Wellness
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#456"
            >
              Business
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#567"
            >
              Events
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#678"
            >
              Crafts
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#789"
            >
              Design and Web
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#890"
            >
              Legal
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#987"
            >
              Personal
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#876"
            >
              Photography
            </a>
          </li>
          <li
            className="list-group-item no-border"
          >
            <a
              href="#999"
            >
              New One
            </a>
          </li>
        </ul>
      </div>
    </div>
    <div
      className="col-9"
    >
      <ul
        className="list-group no-border"
      >
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="123"
            />
            <h2>
              Home Improvements
            </h2>
            <div>
              <div
                className="row"
              >
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Appliance Installation
                      </a>
                    </p>
                  </div>
                </div>
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Cabinetry
                      </a>
                    </p>
                  </div>
                </div>
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Door Installation
                      </a>
                    </p>
                  </div>
                </div>
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Concrete Removal
                      </a>
                    </p>
                  </div>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Appliance Installation
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Cabinetry
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Door Installation
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Concrete Removal
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Dishwasher Installation
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Finish Carpentry
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Floor Polishing
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Furniture Assembly
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Generator Installation
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Gardening
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Home Organizing
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Electrical and Wiring Repair
                  </a>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="345"
            />
            <h2>
              Pets
            </h2>
            <div>
              <div
                className="row"
              >
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Cat Grooming
                      </a>
                    </p>
                  </div>
                </div>
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Dog Training
                      </a>
                    </p>
                  </div>
                </div>
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Pet Boarding
                      </a>
                    </p>
                  </div>
                </div>
                <div
                  className="card no-border col-6"
                >
                  <img
                    className="card-img-top"
                  />
                  <div
                    className="card-body"
                  >
                    <p
                      className="card-text"
                    >
                      <a
                        href="/provider"
                      >
                         
                        Pet Sitting
                      </a>
                    </p>
                  </div>
                </div>
              </div>
              <div
                className="row"
              >
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Cat Grooming
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Dog Training
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Pet Boarding
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Pet Sitting
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                    Dog Walking
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                  </a>
                </div>
                <div
                  className="col-6 list-group-item no-border"
                >
                  <a
                    href="/provider"
                  >
                     
                  </a>
                </div>
              </div>
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="234"
            />
            <h2>
              Wellness
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="456"
            />
            <h2>
              Business
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="567"
            />
            <h2>
              Events
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="678"
            />
            <h2>
              Crafts
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="789"
            />
            <h2>
              Design and Web
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="890"
            />
            <h2>
              Legal
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="987"
            />
            <h2>
              Personal
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="876"
            />
            <h2>
              Photography
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
        <li
          className="list-group-item no-border"
        >
          <div>
            <a
              id="999"
            />
            <h2>
              New One
            </h2>
            <div>
              <div
                className="row"
              />
              <div
                className="row"
              />
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;
